README, acxi.conf cleanups, fixes.

--- a/acxi.conf
+++ b/acxi.conf
@@ -28,16 +28,15 @@
 #OUTPUT_TYPE=opus
 
 ## Quality levels. Override with -q/--quality [level] depending on output type.
-## values: 10-500, 500 best
+## AAC values: 10-500, 500 best
 #QUALITY_AAC=320
-## values: 0-8. 8 best. This is only the level of compression used, only impacts 
-## final size.
+## FLAC values: 0-8. 8 smallest. This is only amount of compression used.
 #QUALITY_FLAC=5
-## values: 0-9.999. 0 is best. This is for lame -V VBR encoding. Decimals ok.
+## MP3 values: 0-9.999. 0 is best. This is for lame -V VBR encoding. Decimals ok.
 #QUALITY_MP3=2
-## -1 - 10. 10 is best. Decimals ok.
+## OGG values: -1 - 10. 10 is best. Decimals ok.
 #QUALITY_OGG=8.25
-## values: 6-256. 256 best.
+## OPUS values: 6-256. 256 best.
 #QUALITY_OPUS=160
 
 ## What file types get copied to destination, and what directories are excluded. 
@@ -57,6 +56,6 @@
 #COMMAND_OGG=/usr/bin/oggenc
 #COMMAND_OPUS=/usr/bin/opusenc
 
-## Rarely used, only if paths are different on your system
+## Rarely used, only if these paths are different on your system
 #MAN_DIRECTORY=/usr/share/man/man1
 #SELF_DIRECTORY=/usr/bin
